# Drawing-Robot

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp
Command/: AbstractCommand.h  AbstractCommandResult.h  CommandConsumer.cpp  CommandConsumer.h  CommandFactory.cpp  CommandFactory.h  CommandId.h  CommandQueue.cpp  CommandQueue.h  CommandUtil.h  DimensionCommand.h  DrawCommand.h
DataStorage/: AbstractDataStorage.h  RoboticDataStorage.cpp  RoboticDataStorage.h
Device/: AbstractDevice.h  RoboticDevice.cpp  RoboticDevice.h
Feature/: AbstractFeature.h  DrawFeature.cpp  DrawFeature.h
Handler/: AbstractHandler.h  CommandHandler.cpp  CommandHandler.h  FileHandler.cpp  FileHandler.h
Helper/: CommandHelper.h  DeviceHelper.h
Resources/InputFiles/: input.txt
Resources/OutputFiles/: output.txt
utils/: thread_guard.h
